# perf-sim

./: CMakeLists.txt  README.md
headers/: Config.h  Decoder.h  ElfManager.h  Executors.h  HazardUnit.h  Instruction.h  Log.h  Memory.h  PerfSim.h  Pipeline.h  RegFile.h  Stage.h  types.h
src/: Decoder.cpp  ElfManager.cpp  Executors.cpp  HazardUnit.cpp  Instruction.cpp  Log.cpp  Memory.cpp  PerfSim.cpp  Pipeline.cpp  RegFile.cpp  main.cpp
tests/dump/: base_arithmetic.txt  base_arithmetic_objdump.txt  division_by_zero.txt  division_by_zero_objdump.txt  empty_objdump.txt  empty_test.txt  hello_world.txt  hello_world_objdump.txt  loop.txt  loop_objdump.txt  malloc_objdump.txt  malloc_test.txt  stack_objdump.txt  stack_test.txt
